# luminaAgents

./: README.md  next_actions.md  pyproject.toml  testserp.py
src/luminaagents/: crew.py  main.py
src/luminaagents/config/: tasks.yaml
