[tool.poetry]
name = "luminaagents"
version = "0.1.0"
description = "luminaagents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
langchain-groq = "^0.1.5"
agentops = "^0.2.1"

[tool.poetry.scripts]
luminaagents = "luminaagents.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"